Set the background colour of tables to white to prevent certain artifacts from appearing when tables partially overlap with the header logo.

--- a/qmrf-web/qmrf-war/src/main/webapp/style/ambit.css
+++ b/qmrf-web/qmrf-war/src/main/webapp/style/ambit.css
@@ -273,6 +273,7 @@ div.protocol label {
 
 table {
 	COLOR: #516373;
+	background-color: white;
 	FONT-SIZE: 10pt;
 	MARGIN-TOP: 5px;
 	MARGIN-LEFT: 0px;
